--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <h1>TimeTrack</h1>
   <p>Live Digital Clock</p>
   <div id="clock">00:00:00</div>
+  <div id="date">January 1, 2025</div>
+  <button id="toggleFormat">Switch to 12-hour</button>
 
   <script src="script.js"></script>
 </body>
